objects/alycecom__AlyceBatchJobSchedule__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>alycecom__Batches_Per_Run__c</fullName>
        <label>Batches Per Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Limit__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Minutes_Before_Next_Run__c</fullName>
        <label>Minutes Before Next Run</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Offset__c</fullName>
        <label>Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>alycecom__Schedule_Id__c</fullName>
        <label>Schedule Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>alycecom__Synchronize_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronize All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>alycecom__Synchronize_From_Date__c</fullName>
        <label>Synchronize From Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>alycecom__Total_Number_Of_Items__c</fullName>
        <label>Total Number Of Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alyce Batch Job Schedule</label>
</CustomObject>